--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14361,6 +14361,10 @@ trix-editor .attachment progress {
   border-radius: 0;
 }
 
+[v-cloak] {
+  display: none;
+}
+
 #app-main {
   height: 100vh;
   width: 100%;
